<resources>
    <string name="app_name">ecommerce</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_home">Home</string>
    <string name="categories">Categories</string>
    <string name="cart">Cart</string>
    <string name="intro_string">What are you looking for?</string>
    <string name="search_products">Search products</string>
    <string name="products">Products</string>
    <string name="men_s_clothing">Men\'s clothing</string>
    <string name="egp">EGP</string>
    <string name="women_s_clothing">Women\'s clothing</string>
    <string name="jewelery">Jewelery</string>
    <string name="electronics">Electronics</string>
    <string name="not_connected">Not connected to the Internet!</string>
    <string name="unidentified_error">Unknown error occured!</string>
    <string name="request_is_not_successful">Request unsuccessful!</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="user_reviews">Customer Reviews</string>
    <string name="purchase">Purchase</string>
    <string name="empty_cart_msg">So sad!! Your cart is empty.\nWe are positive, you will fill it soon :)</string>
    <string name="no_data_found">No data found</string>
    <string name="delete_all_items_in_cart">Delete all items in cart?</string>
    <string name="in_cart">In cart</string>
    <string name="removed_from_cart">Removed from cart</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="cart_is_empty">Cart is empty.</string>
</resources>