<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:background="@color/grey_E3E2E5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_header"
                android:layout_width="0dp"
                android:paddingVertical="20dp"
                android:layout_marginHorizontal="20dp"
                android:layout_height="wrap_content"
                android:text="@string/intro_string"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/searchView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/search_products"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:backgroundTint="@color/black"
                app:cornerRadius="10dp"
                android:fontFamily="@font/teko"
                app:icon="@drawable/round_search_24"
                app:iconTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_header" />

            <TextView
                android:id="@+id/tv_categories"
                android:layout_width="0dp"
                android:layout_marginHorizontal="20dp"
                android:layout_height="wrap_content"
                android:text="@string/categories"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/searchView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_categories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="2dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_categories"
                app:layout_constraintVertical_bias="0.0"
                tools:listitem="@layout/item_category" />

            <TextView
                android:id="@+id/tv_all_products"
                android:layout_width="0dp"
                android:layout_marginHorizontal="20dp"
                android:layout_height="wrap_content"
                android:text="@string/products"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_categories" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_products"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:paddingVertical="2dp"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:spanCount="2"
                app:layout_constraintTop_toBottomOf="@+id/tv_all_products"
                app:layout_constraintVertical_bias="0.0"
                tools:listitem="@layout/item_category_electronics" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>