<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey_E3E2E5"
    tools:context=".app.ui.categories.CategoriesFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_categories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/categories" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_categories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal"
                android:paddingVertical="2dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_categories"
                app:layout_constraintVertical_bias="0.0"
                tools:listitem="@layout/item_category" />

            <ProgressBar
                android:id="@+id/progressBarCategories"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/tv_categories"
                app:layout_constraintBottom_toTopOf="@+id/tv_products_men"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/errorTvCategories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/not_connected"
                android:textColor="@color/black"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/tv_products_men"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_categories" />

            <!-- Men -->
            <TextView
                android:id="@+id/tv_products_men"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_categories"
                android:text="@string/men_s_clothing" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_products_men"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal"
                android:paddingVertical="2dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_products_men"
                app:layout_constraintVertical_bias="0.0"
                tools:listitem="@layout/item_category_men_horizontal" />

            <ProgressBar
                android:id="@+id/progressBarProductsMen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/rv_products_men"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rv_products_men" />

            <TextView
                android:id="@+id/errorTvMen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/not_connected"
                android:textColor="@color/black"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/tv_products_men"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tv_products_women" />

            <!-- Women -->
            <TextView
                android:id="@+id/tv_products_women"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_products_men"
                android:text="@string/women_s_clothing" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_products_women"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal"
                android:paddingVertical="2dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_products_women"
                app:layout_constraintVertical_bias="0.0"
                tools:listitem="@layout/item_category_women_horizontal" />

            <ProgressBar
                android:id="@+id/progressBarProductsWomen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/rv_products_women"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rv_products_women" />

            <TextView
                android:id="@+id/errorTvWomen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/not_connected"
                android:textColor="@color/black"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@id/tv_products_women"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tv_products_Jewelery" />

            <!-- Jewelery -->
            <TextView
                android:id="@+id/tv_products_Jewelery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_products_women"
                android:text="@string/jewelery" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_products_Jewelery"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal"
                android:paddingVertical="2dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_products_Jewelery"
                app:layout_constraintVertical_bias="0.0"
                tools:listitem="@layout/item_category_jewelery_horizontal" />

            <ProgressBar
                android:id="@+id/progressBarProductsJewelery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/rv_products_Jewelery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rv_products_Jewelery" />

            <TextView
                android:id="@+id/errorTvJewelery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/not_connected"
                android:textColor="@color/black"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/tv_products_Jewelery"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tv_products_Electronics" />

            <!-- Electronics -->
            <TextView
                android:id="@+id/tv_products_Electronics"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_products_Jewelery"
                android:text="@string/electronics" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_products_Electronics"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginHorizontal="20dp"
                android:orientation="horizontal"
                android:paddingVertical="2dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_products_Electronics"
                app:layout_constraintVertical_bias="0.0"
                tools:listitem="@layout/item_category_electronics_horizontal" />

            <ProgressBar
                android:id="@+id/progressBarProductsElectronics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/rv_products_Electronics"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rv_products_Electronics" />

            <TextView
                android:id="@+id/errorTvElectronics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:text="@string/not_connected"
                android:textColor="@color/black"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_products_Electronics" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>